<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ysoserial</groupId>
	<artifactId>ysoserial</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>

	<name>ysoserial</name>
	<url>https://github.com/frohoff/ysoserial/</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<!-- maximize compatibility -->
					<source>17</source>
					<target>17</target>
					<!-- ignore noisy internal api warnings -->
					<compilerArgs>
						<arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
						<arg>--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED</arg>
						<arg>--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.runtime=ALL-UNNAMED</arg>
						<arg>--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc=ALL-UNNAMED</arg>
						<arg>--add-exports=java.xml/com.sun.org.apache.xml.internal.dtm=ALL-UNNAMED</arg>
						<arg>--add-exports=java.xml/com.sun.org.apache.xml.internal.serializer=ALL-UNNAMED</arg>
						<arg>-XDignore.symbol.file</arg>
					</compilerArgs>
					
					<fork>true</fork>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<finalName>${project.artifactId}-${project.version}-all</finalName>
					<appendAssemblyId>false</appendAssemblyId>
					<archive>
						<manifest>
							<mainClass>ysoserial.GeneratePayload</mainClass>
						</manifest>
					</archive>
					<descriptors>
						<descriptor>assembly.xml</descriptor>						
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<systemPropertyVariables>
						<java.rmi.server.useCodebaseOnly>false</java.rmi.server.useCodebaseOnly>
					</systemPropertyVariables>
					<argLine>
					--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED
					--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.runtime=ALL-UNNAMED
					--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc=ALL-UNNAMED
					--add-exports=java.xml/com.sun.org.apache.xml.internal.dtm=ALL-UNNAMED
					--add-exports=java.xml/com.sun.org.apache.xml.internal.serializer=ALL-UNNAMED
					--add-opens=java.base/java.net=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>central</id>
			<layout>default</layout>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>		
		<repository>
			<id>ysoserial-m2-repo</id>
			<layout>default</layout>
			<url>https://raw.githubusercontent.com/frohoff/ysoserial-m2-repo/master</url>
		</repository>
		<repository>
			<id>jenkins</id>
			<layout>default</layout>
			<url>https://repo.jenkins-ci.org/public/</url>
		</repository>
	</repositories>

	<dependencies>



		<!-- non-gadget dependencies -->

		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.9</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.shrinkwrap.resolver</groupId>
			<artifactId>shrinkwrap-resolver-depchain</artifactId>
			<version>2.2.6</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.19.0-GA</version>
		</dependency>
		<dependency>
			<groupId>com.nqzero</groupId>
			<artifactId>permit-reflect</artifactId>
			<version>0.3</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<artifactId>remoting</artifactId>
			<groupId>org.jenkins-ci.main</groupId>
			<version>2.55</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.logging</groupId>
			<artifactId>jboss-logging</artifactId>
			<version>3.3.0.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.remoting</groupId>
			<artifactId>jboss-remoting</artifactId>
			<version>4.0.19.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss</groupId>
			<artifactId>jboss-common-core</artifactId>
			<version>2.5.0.Final</version>
			<exclusions>
				<exclusion>
					<groupId>org.jboss.logging</groupId>
					<artifactId>jboss-logging-spi</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.xnio</groupId>
			<artifactId>xnio-nio</artifactId>
			<version>3.3.4.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.sasl</groupId>
			<artifactId>jboss-sasl</artifactId>
			<version>1.0.5.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.remotingjmx</groupId>
			<artifactId>remoting-jmx</artifactId>
			<version>2.0.1.Final</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		
	</dependencies>

	<profiles>
		<profile>
			<id>jdk6</id>
			<activation>
				<jdk>1.6</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.22.1</version>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>javax.el</groupId>
					<artifactId>javax.el-api</artifactId>
					<version>3.0.0</version>
				</dependency>
			</dependencies>
			<!-- workaround for non-overlapping TLS versions in JDK6 and central repo
			 https://central.sonatype.org/articles/2018/May/04/discontinued-support-for-tlsv11-and-below/ -->
			<repositories>
				<repository>
					<id>repo1</id>
					<url>http://repo1.maven.org/maven2</url><!-- intentionally http (see above) -->
				</repository>
			</repositories>
			<pluginRepositories>
				<pluginRepository>
					<id>repo1</id>
					<url>http://repo1.maven.org/maven2</url><!-- intentionally http (see above) -->
				</pluginRepository>
			</pluginRepositories>
		</profile>

		<profile>
			<id>hibernate5</id>
			<activation>
				<property>
					<name>hibernate5</name>
				</property>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-core</artifactId>
					<version>5.0.7.Final</version>
				</dependency>
				<dependency>
					<groupId>javax.el</groupId>
					<artifactId>javax.el-api</artifactId>
					<version>3.0.0</version>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>apache-el</id>
			<activation>
				<activeByDefault>true</activeByDefault>
				<property>
					<name>el</name>
					<value>apache</value>
				</property>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.mortbay.jasper</groupId>
					<artifactId>apache-el</artifactId>
					<version>8.0.27</version>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>juel</id>
			<activation>
				<property>
					<name>el</name>
					<value>juel</value>
				</property>
			</activation>
			<dependencies>
				<dependency>
					<groupId>de.odysseus.juel</groupId>
					<artifactId>juel-impl</artifactId>
					<version>2.2.7</version>
				</dependency>
				<dependency>
					<groupId>de.odysseus.juel</groupId>
					<artifactId>juel-api</artifactId>
					<version>2.2.7</version>
				</dependency>
			</dependencies>
		</profile>

	</profiles>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/frohoff/ysoserial</url>
		</repository>
	</distributionManagement>	
</project>
